-URL Updates -NaviagionDrawer Updates

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,9 +21,15 @@
                 android:title="@string/settings" />
 
             <item
-                android:id="@+id/nav_sourcecode"
-                android:icon="@drawable/ic_code_black_24dp"
-                android:title="@string/website" />
+                android:id="@+id/nav_website"
+                android:icon="@drawable/ic_school_black_24dp"
+                android:title="@string/nav_mes_website" />
+
+            <item
+                android:id="@+id/nav_bug"
+                android:icon="@drawable/ic_bug_report_black_24dp"
+                android:title="@string/nav_submit_bug"
+                />
         </menu>
     </item>
 
