--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -82,7 +82,7 @@
 
         <intent
             android:action="android.intent.action.VIEW"
-            android:data="http://dominiktv.net/" />
+            android:data="https://dominiktv.net/" />
     </Preference>
 
     <!--Quellcode-->
